--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "json-server": "^0.15.1",
     "konva": "^4.0.9",
+    "less": "^3.10.3",
     "vue": "^2.6.10",
     "vue-jsonp": "^0.1.8",
     "vue-konva": "^2.0.9",
