--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue": "^2.6.10",
     "vue-jsonp": "^0.1.8",
     "vue-konva": "^2.0.9",
-    "vue-resource": "^1.5.1"
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
